force-app/main/default/objects/AI_Security_Filters__c/AI_Security_Filters__c.object-meta.xml
<CustomObject>
    <label>Security Layer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>