force-app/main/default/objects/AI_Security_Filters__c/fields/AI_Ignore_Special_Characters__c.field-meta.xml
<CustomField>
    <fullName>AI_Ignore_Special_Characters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Special Characters</label>
    <type>Checkbox</type>
</CustomField>