force-app/main/default/objects/AI_Security_Filters__c/fields/AI_Match_Complete_Word__c.field-meta.xml
<CustomField>
    <fullName>AI_Match_Complete_Word__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Complete Word</label>
    <type>Checkbox</type>
</CustomField>