force-app/main/default/objects/AI_Security_Filters__c/fields/AI_Optimized_Search_Pattern__c.field-meta.xml
<CustomField>
    <fullName>AI_Optimized_Search_Pattern__c</fullName>
    <formula>IF( AI_Match_Complete_Word__c ,&quot;(?&lt;=^|\\s)&quot;, &quot;&quot;)&amp;Search_Pattern__c&amp;IF( AI_Match_Complete_Word__c ,&quot;(?=\\s|$)&quot;, &quot;&quot;)</formula>
    <label>Optimized Search Pattern</label>
    <type>Text</type>
</CustomField>