force-app/main/default/objects/AI_Security_Filters__c/fields/Blocklist__c.field-meta.xml
<CustomField>
    <fullName>Blocklist__c</fullName>
    <description>This field is used to house values that will be scanned across long text and rich text fields. If found they will be replaced.</description>
    <inlineHelpText>Separate each value by semi colon.
Example: RX500;DX670;CD245</inlineHelpText>
    <label>Blocklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>