force-app/main/default/objects/AI_Security_Filters__c/fields/Replacement_Value__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Value__c</fullName>
    <displayFormat>SF-{0000}</displayFormat>
    <inlineHelpText>Ex. Policy{n}</inlineHelpText>
    <label>Replacement Value</label>
    <type>AutoNumber</type>
</CustomField>