force-app/main/default/objects/AI_Security_Filters__c/fields/Search_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Search_Pattern__c</fullName>
    <inlineHelpText>Reguler Expression</inlineHelpText>
    <label>Search Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>