force-app/main/default/objects/AI_Security_Filters__c/recordTypes/Apex.recordType-meta.xml
<RecordType>
    <fullName>Apex</fullName>
    <active>true</active>
    <label>Apex</label>
</RecordType>