force-app/main/default/objects/AI_Security_Filters__c/recordTypes/Blocklist.recordType-meta.xml
<RecordType>
    <fullName>Blocklist</fullName>
    <active>true</active>
    <label>Blocklist</label>
</RecordType>