force-app/main/default/objects/AI_Security_Filters__c/recordTypes/Regex.recordType-meta.xml
<RecordType>
    <fullName>Regex</fullName>
    <active>true</active>
    <label>Regex</label>
</RecordType>