force-app/main/default/objects/AI_Security_Filters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Search_Pattern__c</columns>
    <columns>Replacement_Value__c</columns>
    <columns>Comment__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>