force-app/main/default/objects/AI_Security_Filters__c/listViews/Blocklist.listView-meta.xml
<ListView>
    <fullName>Blocklist</fullName>
    <columns>NAME</columns>
    <columns>Blocklist__c</columns>
    <columns>Replacement_Value__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AI_Security_Filters__c.Blocklist</value>
    </filters>
    <label>Blocklist</label>
</ListView>