force-app/main/default/objects/AI_Security_Filters__c/listViews/Regex.listView-meta.xml
<ListView>
    <fullName>Regex</fullName>
    <columns>NAME</columns>
    <columns>Search_Pattern__c</columns>
    <columns>Replacement_Value__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AI_Security_Filters__c.Regex</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Regex</label>
</ListView>